--- a/index.html
+++ b/index.html
@@ -12,124 +12,124 @@
 <body dir="rtl" class=" d-flex justify-content-center flex-column align-items-center col-sm- col-md- ">
     <div class="container">
         <div class="row">
-            <div class="cell">100</div>
-            <div class="cell purple">99</div>
-            <div class="cell">98</div>
-            <div class="cell purple">97</div>
-            <div class="cell">96</div>
-            <div class="cell purple">95</div>
-            <div class="cell">94</div>
-            <div class="cell purple">93</div>
-            <div class="cell">92</div>
-            <div class="cell purple">91</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">100</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">99</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">98</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">97</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">96</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">95</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">94</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">93</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">92</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">91</div>
         </div>
         <div class="row">
-            <div class="cell purple">90</div>
-            <div class="cell">89</div>
-            <div class="cell purple red-border">88</div>
-            <div class="cell">87</div>
-            <div class="cell purple">86</div>
-            <div class="cell">85</div>
-            <div class="cell purple">84</div>
-            <div class="cell">83</div>
-            <div class="cell purple">82</div>
-            <div class="cell">81</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">90</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">89</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">88</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">87</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">86</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">85</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">84</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">83</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">82</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">81</div>
         </div>
         <div class="row">
-            <div class="cell">80</div>
-            <div class="cell purple">79</div>
-            <div class="cell">78</div>
-            <div class="cell purple">77</div>
-            <div class="cell">76</div>
-            <div class="cell purple">75</div>
-            <div class="cell red-border">74</div>
-            <div class="cell purple green-border">73</div>
-            <div class="cell">72</div>
-            <div class="cell purple">71</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">80</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">79</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">78</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">77</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">76</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">75</div>
+            <div class="cell red-border flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">74</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">73</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">72</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">71</div>
         </div>
         <div class="row">
-            <div class="cell purple">70</div>
-            <div class="cell">69</div>
-            <div class="cell purple">68</div>
-            <div class="cell green-border">67</div>
-            <div class="cell purple">66</div>
-            <div class="cell">65</div>
-            <div class="cell purple">64</div>
-            <div class="cell">63</div>
-            <div class="cell purple">62</div>
-            <div class="cell">61</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">70</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">69</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">68</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">67</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1 purple">66</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">65</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">64</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">63</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">62</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">61</div>
         </div>
         <div class="row">
-            <div class="cell">60</div>
-            <div class="cell purple">59</div>
-            <div class="cell">58</div>
-            <div class="cell purple">57</div>
-            <div class="cell">56</div>
-            <div class="cell purple">55</div>
-            <div class="cell ">54</div>
-            <div class="cell purple">53</div>
-            <div class="cell">52</div>
-            <div class="cell purple">51</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">60</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">59</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">58</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">57</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">56</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">55</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">54</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">53</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">52</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">51</div>
         </div>
         <div class="row">
-            <div class="cell purple">50</div>
-            <div class="cell">49</div>
-            <div class="cell purple">48</div>
-            <div class="cell">47</div>
-            <div class="cell purple red-border">46</div>
-            <div class="cell">45</div>
-            <div class="cell purple">44</div>
-            <div class="cell">43</div>
-            <div class="cell purple">42</div>
-            <div class="cell">41</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">50</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">49</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">48</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">47</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">46</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">45</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">44</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">43</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">42</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">41</div>
         </div>
         <div class="row">
-            <div class="cell">40</div>
-            <div class="cell purple">39</div>
-            <div class="cell">38</div>
-            <div class="cell purple">37</div>
-            <div class="cell">36</div>
-            <div class="cell purple">35</div>
-            <div class="cell ">34</div>
-            <div class="cell purple">33</div>
-            <div class="cell green-border">32</div>
-            <div class="cell purple">31</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">40</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">39</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">38</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">37</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">36</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">35</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">34</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">33</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">32</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">31</div>
         </div>
         <div class="row">
-            <div class="cell purple">30</div>
-            <div class="cell">29</div>
-            <div class="cell purple">28</div>
-            <div class="cell">27</div>
-            <div class="cell purple">26</div>
-            <div class="cell red-border">25</div>
-            <div class="cell purple">24</div>
-            <div class="cell">23</div>
-            <div class="cell purple">22</div>
-            <div class="cell">21</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">30</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">29</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">28</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">27</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">26</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">25</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">24</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">23</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">22</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">21</div>
         </div>
         <div class="row">
-            <div class="cell">20</div>
-            <div class="cell purple green-border">19</div>
-            <div class="cell">18</div>
-            <div class="cell purple">17</div>
-            <div class="cell">16</div>
-            <div class="cell purple">15</div>
-            <div class="cell ">14</div>
-            <div class="cell purple">13</div>
-            <div class="cell">12</div>
-            <div class="cell purple">11</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">20</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">19</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">18</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">17</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">16</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">15</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">14</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">13</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">12</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">11</div>
         </div>
         <div class="row">
-            <div class="cell purple">10</div>
-            <div class="cell">9</div>
-            <div class="cell purple">8</div>
-            <div class="cell ">7</div>
-            <div class="cell purple">6</div>
-            <div class="cell ">5</div>
-            <div class="cell purple">4</div>
-            <div class="cell ">3</div>
-            <div class="cell purple">2</div>
-            <div class="cell ">1</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">10</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">9</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">8</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">7</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">6</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">5</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">4</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">3</div>
+            <div class="cell purple flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">2</div>
+            <div class="cell flex-sm-1 flex-xl-2 flex-xxl-3 flex-md-1">1</div>
             <!-- <div class="cell">Start</div> -->
         </div>
     </div>
